[package]
name = "space_trader"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
rusqlite = "0.36.0"
lazy_static = "1.5.0"
base64 = "0.22.1"
chrono = "0.4.41"
ctrlc = "3.4"
crossbeam-channel = "0.5.15"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = {  version = "0.12.21", features = ["blocking"] }
